feature(api): books endpoints protected
