# backend/docs/swagger.yaml
@@ -120,6 +120,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: List saved books
       tags:
       - books
@@ -145,6 +147,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Get book by key
       tags:
       - books
@@ -176,6 +180,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Stream audio book
       tags:
       - books
@@ -203,6 +209,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Search books
       tags:
       - books
